--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 
 <script>
     let isFront = true; // Keep track of whether the front of the card is showing
+    let nextPokemonData = null; // Store data about the next Pokémon to be displayed
 
     // Fetch data about a random Pokémon from the PokeAPI
     function fetchRandomPokemon() {
@@ -79,30 +80,39 @@
         fetch(`https://pokeapi.co/api/v2/pokemon/${randomId}`)
             .then(response => response.json())
             .then(data => {
-                // Display the Pokémon's name and image on the front of the card
-                document.getElementById('pokemon-name').textContent = data.name;
-                document.getElementById('pokemon-image').src = data.sprites.front_default;
-
-                // Display the Pokémon's abilities on the back of the card
-                const abilitiesList = document.getElementById('pokemon-abilities');
-                abilitiesList.innerHTML = ''; // Clear the list of previous abilities
-                data.abilities.forEach(ability => {
-                    const abilityItem = document.createElement('li');
-                    abilityItem.textContent = ability.ability.name;
-                    abilitiesList.appendChild(abilityItem);
-                });
+                nextPokemonData = data; // Store the data for later
             })
             .catch(error => console.error('Error:', error));
+    }
+
+    // Update the display with data about the next Pokémon
+    function updateDisplay() {
+        // Display the Pokémon's name and image on the front of the card
+        document.getElementById('pokemon-name').textContent = nextPokemonData.name;
+        document.getElementById('pokemon-image').src = nextPokemonData.sprites.front_default;
+
+        // Display the Pokémon's abilities on the back of the card
+        const abilitiesList = document.getElementById('pokemon-abilities');
+        abilitiesList.innerHTML = ''; // Clear the list of previous abilities
+        nextPokemonData.abilities.forEach(ability => {
+            const abilityItem = document.createElement('li');
+            abilityItem.textContent = ability.ability.name;
+            abilitiesList.appendChild(abilityItem);
+        });
+
+        nextPokemonData = null; // Clear the data for the next Pokémon
     }
 
     // Fetch data about a random Pokémon when the page loads
     fetchRandomPokemon();
 
-    // Rotate the card and fetch data about a random Pokémon when it's clicked, if the front is showing
+    // Rotate the card and fetch data about a random Pokémon when it's clicked, if the back is showing
     document.getElementById('card').addEventListener('click', function() {
         this.classList.toggle('rotated');
-        if (isFront) {
+        if (!isFront) {
             fetchRandomPokemon();
+        } else if (nextPokemonData) {
+            updateDisplay();
         }
         isFront = !isFront; // Update the state of the card
     });
