--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         .card {
             width: 300px;
             height: 400px;
-            background-color: #fff;
+            background-image: linear-gradient(45deg, #ccc 25%, transparent 25%, transparent 50%, #ccc 50%, #ccc 75%, transparent 75%, transparent);
+            background-size: 20px 20px;
             border-radius: 10px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             display: flex;
@@ -75,6 +76,31 @@
             bottom: 20px;
             right: 20px;
         }
+        .card__spark--5 {
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            animation: spark 0.5s linear infinite;
+            opacity: 0;
+        }
+        .card.rotated .card__spark--5 {
+            opacity: 1;
+            animation-delay: 0.5s;
+        }
+        @keyframes spark {
+            0% {
+                transform: translate(-50%, -50%) scale(0);
+                opacity: 1;
+            }
+            50% {
+                transform: translate(-50%, -50%) scale(1);
+                opacity: 1;
+            }
+            100% {
+                transform: translate(-50%, -50%) scale(0);
+                opacity: 0;
+            }
+        }
         @media (max-width: 600px) {
             .card {
                 width: 250px;
@@ -96,6 +122,7 @@
             <div class="card__spark card__spark--2"></div>
             <div class="card__spark card__spark--3"></div>
             <div class="card__spark card__spark--4"></div>
+            <div class="card__spark card__spark--5"></div>
         </div>
         <div class="card__face card__face--back">
             <h3>Abilities:</h3>
