--- a/index.html
+++ b/index.html
@@ -1,117 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #f0f0f0;
-            perspective: 800px;
-        }
-        .card {
-            width: 300px;
-            height: 400px;
-            background-image: linear-gradient(45deg, #ccc 25%, transparent 25%, transparent 50%, #ccc 50%, #ccc 75%, transparent 75%, transparent);
-            background-size: 20px 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            transition: transform 0.5s;
-            cursor: pointer;
-            position: relative;
-            transform-style: preserve-3d;
-        }
-        .card.rotated {
-            transform: rotateY(180deg);
-        }
-        .card__face {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            backface-visibility: hidden;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-        }
-        .card__face--back {
-            transform: rotateY(180deg);
-        }
-        img {
-            width: 150px;
-            height: 150px;
-        }
-        .card__spark {
-            position: absolute;
-            width: 20px;
-            height: 20px;
-            background-color: #ffd700;
-            border-radius: 10px;
-            opacity: 0;
-            transition: opacity 0.5s, transform 0.5s;
-        }
-        .card.rotated .card__spark {
-            opacity: 1;
-            transform: translateY(-50px);
-        }
-        .card__spark--1 {
-            top: 20px;
-            left: 20px;
-        }
-        .card__spark--2 {
-            top: 20px;
-            right: 20px;
-        }
-        .card__spark--3 {
-            bottom: 20px;
-            left: 20px;
-        }
-        .card__spark--4 {
-            bottom: 20px;
-            right: 20px;
-        }
-        .card__spark--5 {
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            animation: spark 0.5s linear infinite;
-            opacity: 0;
-        }
-        .card.rotated .card__spark--5 {
-            opacity: 1;
-            animation-delay: 0.5s;
-        }
-        @keyframes spark {
-            0% {
-                transform: translate(-50%, -50%) scale(0);
-                opacity: 1;
-            }
-            50% {
-                transform: translate(-50%, -50%) scale(1);
-                opacity: 1;
-            }
-            100% {
-                transform: translate(-50%, -50%) scale(0);
-                opacity: 0;
-            }
-        }
-        @media (max-width: 600px) {
-            .card {
-                width: 250px;
-                height: 350px;
-            }
-            img {
-                width: 125px;
-                height: 125px;
-            }
-        }
-    </style>
+   <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="card" class="card">
