image on one side

--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
             <img id="pokemon-image" src="">
             <h2 id="pokemon-name"></h2>
         </div>
-        <div class="card__face card__face--back">
-            <h3>Abilities:</h3>
-            <ul id="pokemon-abilities"></ul>
-        </div>
+        <div class="card__face card__face--back"></div>
     </div>
 
 <script>
