--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
           <img src="images/card.jpg" alt="">
         </div>
       </div>
+<script src="https://telegram.org/js/telegram-web-app.js"></script>
 <script src="scr.js"></script>
 </body>
 </html>
