--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
-<body>
+<body class="prevent-select">
     <div class="card" ontouchstart="this.classList.toggle('rotate');" onclick="this.classList.toggle('rotate');">
-        <div class="back">
+        <div class="back" >
           <img id="pokemon-image" src="" alt="">
           <h2 id="pokemon-name"></h2>
           <p id="pokemon-info"></p>
         </div>
         <div class="front">
+
         </div>
       </div>
 
