--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body class="prevent-select">
-    <div class="card" ontouchstart="this.classList.toggle('rotate');" onclick="this.classList.toggle('rotate');">
+    <div class="card" onclick="this.classList.toggle('rotate');">
         <div class="back" >
           <img id="pokemon-image" src="" alt="">
           <h2 id="pokemon-name"></h2>
